--- a/src/main/resources/templates/guide/intern_detail.html
+++ b/src/main/resources/templates/guide/intern_detail.html
@@ -81,10 +81,10 @@
             <th>College Name</th>
             <td><input type="text" name="collegeName" th:value="${intern.get().collegeName}" class="no-border" readonly></td>
           </tr>
-          <tr>
-            <th>Branch</th>
-            <td><input type="text" name="branch" th:value="${intern.get().branch}" class="no-border" readonly></td>
-          </tr>
+<!--          <tr>-->
+<!--            <th>Branch</th>-->
+<!--            <td><input type="text" name="branch" th:value="${intern.get().branch}" class="no-border" readonly></td>-->
+<!--          </tr>-->
 
           <tr>
             <th>Domain</th>
