--- a/src/main/resources/templates/guide/intern_groups.html
+++ b/src/main/resources/templates/guide/intern_groups.html
@@ -112,7 +112,9 @@
 					<table class="table table-striped table-bordered">
 						<tr class="hover-element">
 							<th><i class="fa-solid fa-chevron-down"></i></th>
-							<th>Group: <span th:text="${group.groupId}"></span></th>
+							<th>Group:
+								<a th:href="@{'/bisag/guide/group/' + ${group.groupId} + '/members'}" th:text="${group.groupId}"></a>
+							</th>
 							<th>Domain: <span th:text="${group.domain}"></span></th>
 							<th>Guide: <span th:text="${group.guide.name}"></span></th>
 							<th>
@@ -132,7 +134,7 @@
 						<thead>
 						<tr>
 							<th>ID</th>
-							<th>firstName</th>
+							<th>Full Name</th>
 							<th>Email</th>
 						</tr>
 						</thead>
