--- a/src/main/resources/templates/guide/weekly_report.html
+++ b/src/main/resources/templates/guide/weekly_report.html
@@ -40,7 +40,17 @@
 			transition: background-color 0.1s ease, border-radius 0.1s ease, padding
 			0.1s ease;
 		}
+		.unread-report {
+			border: 2px solid red !important;
+		}
 
+		.unread-marker {
+			color: red;
+			font-weight: bold;
+			display: block;
+			text-align: right;
+			margin-top: 5px;
+		}
 		/* Reset styles when not hovering */
 		.icon-container .fa-ellipsis-vertical, .icon-container .dropdown {
 			background-color: initial;
@@ -68,19 +78,21 @@
 		<h1>Weekly Reports</h1>
 		<nav>
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="index.html">Reports</a></li>
+				<li class="breadcrumb-item">Reports</li>
 				<li class="breadcrumb-item active">Weekly Reports</li>
 			</ol>
 		</nav>
 	</div>
 
 	<ul class="nav nav-tabs nav-justified">
-		<li class="nav-item"><a class="nav-link active" id="tab1"
-								href="javascript:void(0)" onclick="switchTab('form1', 'tab1')">
-			Weekly Report</a></li>
-		<li class="nav-item"><a class="nav-link" id="tab2"
-								href="javascript:void(0)"></a></li>
-
+		<li class="nav-item"><a class="nav-link active" id="tab1" href="javascript:void(0)"
+								onclick="switchTab('form1', 'tab1')">Weekly Report
+			<span th:if="${totalUnreadReports > 0}"
+				  th:text="${totalUnreadReports}"
+				  class="badge badge-danger ml-2">
+    </span>
+			</div></a></li>
+		<li class="nav-item"><a class="nav-link" id="tab2" href="javascript:void(0)"></a></li>
 	</ul>
 
 	<div class="form-container active" id="form1">
@@ -89,48 +101,51 @@
 			<div th:each="group : ${groups}">
 				<div class="collapsible" data-toggle="collapse"
 					 th:data-target="'#group_' + ${group.id}">
-					<table class="table table-striped table-bordered">
-						<tr class="hover-element">
-							<th><i class="fa-solid fa-chevron-down"></i></th>
-							<th><span th:text="'Group: ' + ${group.groupId}"></span></th>
-							<th><span
-									th:text="'Project: ' + ${group.projectDefinition}"></span></th>
-							<th><span th:text="'Guide: ' + ${group.guide.name}"></span></th>
+					<table class="table table-striped table-bordered text-start align-middle">
 
+						<tbody>
+						<tr class="hover-element">
+							<td><i class="fa-solid fa-chevron-down" style="width: 5%"></i></td>
+
+							<td>
+								<span th:text="'Group: ' + ${group.groupId}" style="width: 20%"></span>
+								<span th:if="${unreadReportCounts[group.groupId] > 0}"
+									  th:text="'(' + ${unreadReportCounts[group.groupId]} + ')'"
+									  class="badge bg-danger ms-1">
+                </span>
+							</td>
+
+							<td>
+								<span th:text="'Project: ' + ${group.projectDefinition}" style="width: 25%"></span>
+							</td>
+
+							<td>
+								<span th:text="'Guide: ' + ${group.guide.name}" style="width: 25%"></span>
+							</td>
+
+							<td style="width: 15%">
+								<form th:action="@{/bisag/guide/markGroupReportsRead}" method="post" style="margin: 0;">
+									<input type="hidden" name="groupId" th:value="${group.groupId}" />
+									<button class="btn btn-success btn-sm px-3 py-1 rounded-pill" type="submit">View All</button>
+								</form>
+							</td>
 						</tr>
+						</tbody>
 					</table>
 
 				</div>
 
 				<div class="content collapse" th:id="'group_' + ${group.id}">
 					<div class="modal-body">
-						<!-- Check if reports exist for the selected group -->
 						<div class="row">
-							<!-- Iterate over each report for the selected group -->
-							<div th:each="report : ${reports}"
-								 th:if="${group.id == report.group.id}" class="col-md-4">
-								<div class="card">
+							<div th:each="report : ${reports}" th:if="${group.id == report.group.id}" class="col-md-4">
+								<div class="card" th:classappend="${report.GisRead == 0 ? 'unread-report' : ''}">
 									<div class="card-body">
-										<div
-												class="d-flex justify-content-between align-items-center">
+										<div class="d-flex justify-content-between align-items-center">
 											<div class="card-title">
 												<h5 class="mb-0" th:text="'Week - ' + ${report.weekNo}"></h5>
 											</div>
-											<!-- Three dots icon -->
-											<div class="dropdown icon-container">
-												<i class="fa-solid fa-ellipsis-vertical"
-												   data-toggle="dropdown" role="button" aria-haspopup="true"
-												   aria-expanded="false"></i>
-												<div class="dropdown-menu">
-													<a th:href="@{/bisag/guide/viewPdf/{internId}/{weekNo}(internId=${report.intern.internId}, weekNo=${report.weekNo})}"
-													   target="_blank"
-													   class="dropdown-item">View Report</a> <a
-														th:href="@{'/bisag/guide/guide_weekly_report_details/' + ${group.groupId} + '/' + ${report.weekNo}}"
-														class="dropdown-item">Details</a>
-												</div>
-											</div>
 										</div>
-
 										<table class="table table-striped table-bordered">
 											<tr>
 												<td>Group ID:</td>
@@ -146,14 +161,19 @@
 											</tr>
 											<tr>
 												<td>Submitted By:</td>
-												<td
-														th:text="${report.intern.firstName}"></td>
+												<td th:text="${report.intern.firstName}"></td>
 											</tr>
 											<tr>
 												<td>Status:</td>
-												<td
-														th:class="${report.status == 'late submitted' ? 'late-status' : 'green-status'}"
-														th:text="${report.status}"></td>
+												<td th:class="${report.status == 'late submitted' ? 'late-status' : 'green-status'}"
+													th:text="${report.status}"></td>
+											</tr>
+											<tr>
+												<td>Actions:</td>
+												<td>
+													<a th:href="@{/bisag/guide/viewPdf/{internId}/{weekNo}(internId=${report.intern.internId}, weekNo=${report.weekNo})}" target="_blank" class="btn btn-sm btn-primary">View</a>
+													<a th:href="@{'/bisag/guide/guide_weekly_report_details/' + ${group.groupId} + '/' + ${report.weekNo}}" class="btn btn-sm btn-info ms-2">Details</a>
+												</td>
 											</tr>
 										</table>
 									</div>
@@ -162,9 +182,6 @@
 						</div>
 					</div>
 				</div>
-
-
-
 			</div>
 		</div>
 	</div>
