--- a/src/main/resources/templates/intern/undertaking.html
+++ b/src/main/resources/templates/intern/undertaking.html
@@ -72,9 +72,11 @@
   <div class="undertaking-box">
     <h2>Intern Undertaking Form</h2>
 
-    <!-- Undertaking Content -->
-    <div class="undertaking-content" id="undertakingText">
-      Loading undertaking content...
+    <!-- Undertaking PDF View Button -->
+    <div class="undertaking-content" style="text-align: center; padding: 20px;">
+      <a href="/bisag/intern/undertaking/view" target="_blank" class="accept-btn" style="text-decoration: none;">
+        View Undertaking Form
+      </a>
     </div>
 
     <!-- Accept Checkbox -->
