--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -192,6 +192,9 @@
                                   class="badge badge-danger ml-2">
     </span>
                         </a></li>
+                        <li><a th:href="@{/bisag/admin/admin_current_working_groups_weekly_report}"> <i
+                                class="bi bi-circle"></i><span>Current Weekly Reports</span>
+                        </a></li>
                         <li><a th:href="@{/bisag/admin/weekly-reports/pending}"> <i
                                 class="bi bi-circle"></i><span>Pending Weekly Reports</span>
                         </a></li>
