--- a/src/main/resources/templates/fragments/internAsideFragment.html
+++ b/src/main/resources/templates/fragments/internAsideFragment.html
@@ -82,6 +82,9 @@
 				<li><a th:href="@{/bisag/intern/final_report_submission}"> <i
 						class="bi bi-circle"></i><span>Final Report</span>
 				</a></li>
+				<li><a th:href="@{/bisag/intern/final_report_rejection}"> <i
+						class="bi bi-circle"></i><span>Changed Final Report</span>
+				</a></li>
 			</ul></li>
 	</ul>
 
